# weather-mcp

./: .env.example  .gitignore  README.md  pr_description.md  pyproject.toml
app/: __init__.py  client.py  main.py  mcp_server.py  server.py  weather_service.py
